# CausalSmartHome

./: .gitignore  NOTICE.md  README.md  README_SELF.md  README_STAGE4.md  RECOVERY_NOTES.md  pyproject.toml  requirements.txt  sitecustomize.py
artifacts/: causal_smart_home_py_reports_20260622_171359_manifest.json
causal_smart_home/: __init__.py  causal_filter.py  causal_gss.py  causal_gss_reweight.py  causal_prior.py  causal_prompt.py  causal_prompt_adapter.py  causal_relation_adapter.py  causal_relation_prior_source.py  causal_tof.py  cli.py  data_lineage.py  demo_data.py  event_tensor.py  experiment_matrix.py  experiment_paths.py  filter_sweep.py  gcad_adapter.py  gcad_prior_source.py  gen_downstream_ad.py  gen_original_tof.py  json_utils.py  pipeline.py  schema.py  smartgen_adapter.py  smartgen_experiment.py  smartgen_original_tof.py  smartguard_adapter.py  smartguard_experiment.py  target_distribution_guard.py  zero_target_audit.py
docs/: codex_handoff_prompt.md  gcad_gen_integration_notes.md  task10_fr_weighted_smartgen.md  task11_us_smartgen_anomaly.md  task12_gcad_gss_prompt_stage3.md  task13_deeper_gcad_smartgen_integration.md  task14_stage4_server_run_report.md  task15_stage4_downweight_codex_mainline.md  task16_stage4_gen_builtin_downstream_ad.md  task1_source_review.md  task2_feasibility_and_plan.md  task3_chinese_paper_draft.md  task4_implementation_and_testing.md  task5_smartguard_sweep_eval.md  task6_smartgen_anomaly_route.md  task7_sp_smartgen_anomaly.md  task8_sp_filter_diagnostics.md  task9_sp_weighted_smartgen.md
examples/: device_info_toy.json
external_sources/: README.md
scripts/: build_causal_gss_prompt.py  build_codex_generation_package.py  build_codex_gpt55_generation_package.py  build_gcad_gss_prompt.py  build_gpt55_generation_package.py  build_guarded_causal_reweighted_gss_prompt.py  check_cuda_preflight.py  check_gen_main_data.py  check_project.py  check_recovery_integrity.py  diagnose_sp_st_causal_edges.py  evaluate_generation_quality.py  evaluate_smartgen_gcad_quality.py  finalize_zero_target_synthetic.py  freeze_main_experiment.py  freeze_sp_st_gpt55_main_experiment.py  generate_codex_gpt55_surrogate_sequences.py  import_frozen_target_assisted.py  (+48 more)
(+69 files in other folders)
