[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-smart-home"
version = "0.1.0"
description = "Causal-relation-enhanced smart-home generation and anomaly detection."
requires-python = ">=3.8"
authors = [{name = "CausalSmartHome maintainers"}]
dependencies = [
  "numpy>=1.23",
  "scikit-learn>=1.1",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
csh = "causal_smart_home.cli:main"

[tool.setuptools.packages.find]
include = ["causal_smart_home*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = [
  ".git",
  ".venv",
  "venv",
  "env",
  "outputs",
  "backups",
  "external_sources",
  "causal_smart_home/gen_core",
  "causal_smart_home/resources",
]
python_files = ["test_*.py"]
addopts = "--import-mode=importlib"
